package data;

public class LoginDatabase {
}
