package data;

public class OrganizationDatabase {
}
