@startuml

title __DATA's Class Diagram__\n

  namespace data {
    class data.DataConnector {
        {static} + DBDRIVER : String
        {static} + DBPASS : String
        {static} + DBURL : String
        {static} + DBUSER : String
        {static} - _instance : DataConnector
        + Day()
        + Decade()
        + Dish()
        {static} + Instance()
        + Meal()
        + Produkty()
        - DataConnector()
    }
  }
  

  namespace data {
    class data.DayDatabase {
        - connection : Connection
        - query : String
        - statement : PreparedStatement
        + CzyJestemSwietem()
        + DayDatabase()
        + DodajPosilekDoDnia()
        + DodajSwieto()
        + Edytuj()
        + IleSwiat()
        + PobierzDni()
        + PobierzDzien()
        + Usun()
        + UsunPosilekZDnia()
        + UsunSwieto()
        + UtworzDzien()
    }
  }
  

  namespace data {
    class data.DecadeDatabase {
        - connection : Connection
        - query : String
        - statement : PreparedStatement
        + DecadeDatabase()
        + Edytuj()
        + PobierzDekade()
        + PobierzDni()
        + Usun()
        + UtworzDekade()
    }
  }
  

  namespace data {
    class data.DishDatabase {
        - connection : Connection
        - query : String
        - statement : PreparedStatement
        + DishDatabase()
        + DodajProduktDoDania()
        + Edytuj()
        + PobierzDania()
        + PobierzDaniaZPosilku()
        + PobierzDanie()
        + Usun()
        + UsunProduktZDania()
        + UtworzDanie()
    }
  }
  

  namespace data {
    class data.LoginDatabase {
    }
  }
  

  namespace data {
    class data.MealDatabase {
        - connection : Connection
        - query : String
        - statement : PreparedStatement
        + DodajDanieDoPosilku()
        + Edytuj()
        + MealDatabase()
        + PobierzPosilek()
        + PobierzPosilekZDnia()
        + PobierzPosilki()
        + Usun()
        + UsunDanieZPosilku()
        + UsunPosilekZDnia()
        + UtworzPosilek()
    }
  }
  

  namespace data {
    class data.OrganizationDatabase {
    }
  }
  

  namespace data {
    class data.ProduktDatabase {
        - connection : Connection
        - query : String
        - statement : PreparedStatement
        + Edytuj()
        + PobierzProdukt()
        + PobierzProdukty()
        + PobierzProduktyZDania()
        + ProduktDatabase()
        + Usun()
        + UtworzProdukt()
    }
  }
  

  data.DayDatabase o-- data.DataConnector : connector
  data.DecadeDatabase o-- data.DataConnector : connector
  data.DishDatabase o-- data.DataConnector : connector
  data.MealDatabase o-- data.DataConnector : connector
  data.ProduktDatabase o-- data.DataConnector : connector


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
